--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
  - get status of parsing files (percent of finished files or sth like that)
- - GUI warning window
- - implement stop button as well as forward and backward
- - changing play/pause button
- - finally connect animations with GUI
- - improve 3D movement in pyglet
- - add slidebar to set up size of cell approximation (how many cells to one vector)
+ - improve 3D movement in pyglet #done
+ - add slidebar to set up size of cell approximation (how many cells to one vector) #done with roller
+ - disable play/pause menu when file not set 
+ - catch exception when no file chosen by user
+ - fix frame counter in main GUI
+ - add possibility to show one file not whole directory
+ - showing 2D plots from GUI
+ 
+ 
 
